[tool.poetry]
name = "babyagi-web-app"
version = "0.1.0"
description = ""
authors = ["kelesit <846236601@qq.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
langchain = "^0.0.281"
openai = "^0.28.0"
streamlit = "^1.26.0"
tiktoken = "^0.4.0"
faiss-cpu = "^1.7.4"
watchdog = "^3.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
